tests/snapshots/snapshot_tests__cusp_lut.snap
---
source: tests/snapshot_tests.rs
expression: values
---
- "(53.599998, 70.407715)"
- "(53.500000, 70.751953)"
- "(53.299999, 71.059570)"
- "(53.200001, 71.455078)"
- "(53.000000, 71.843262)"
- "(52.900002, 72.326660)"
- "(52.700001, 72.766113)"
- "(52.599998, 73.315430)"
- "(52.500000, 73.901367)"
- "(52.299999, 74.443359)"
- "(52.200001, 75.095215)"
- "(52.099998, 75.783691)"
- "(52.000000, 76.516113)"
- "(51.900002, 77.277832)"
- "(51.799999, 78.076172)"
- "(51.700001, 78.911133)"
- "(51.599998, 79.782715)"
- "(51.500000, 80.690918)"
- "(51.400002, 81.643066)"
- "(51.299999, 82.631836)"
- "(51.200001, 83.657227)"
- "(51.099998, 84.719238)"
- "(51.099998, 85.861816)"
- "(51.000000, 87.062988)"
- "(50.900002, 88.256836)"
- "(50.799999, 89.487305)"
- "(50.799999, 90.805664)"
- "(50.700001, 92.182617)"
- "(51.000000, 91.369629)"
- "(51.599998, 89.304199)"
- "(52.099998, 87.392578)"
- "(52.599998, 85.598145)"
- "(53.099998, 83.935547)"
- "(53.700001, 82.419434)"
- "(54.200001, 80.976562)"
- "(54.599998, 79.643555)"
- "(55.099998, 78.405762)"
- "(55.599998, 77.255859)"
- "(56.099998, 76.120605)"
- "(56.500000, 75.095215)"
- "(57.000000, 74.121094)"
- "(57.400002, 73.183594)"
- "(57.799999, 72.282715)"
- "(58.299999, 71.491699)"
- "(58.700001, 70.686035)"
- "(59.099998, 69.916992)"
- "(59.500000, 69.191895)"
- "(60.000000, 68.532715)"
- "(60.400002, 67.902832)"
- "(60.799999, 67.272949)"
- "(61.200001, 66.672363)"
- "(61.599998, 66.093750)"
- "(62.000000, 65.544434)"
- "(62.400002, 65.017090)"
- "(62.799999, 64.511719)"
- "(63.200001, 64.020996)"
- "(63.599998, 63.552246)"
- "(64.000000, 63.098145)"
- "(64.400002, 62.651367)"
- "(64.800003, 62.226562)"
- "(65.199997, 61.816406)"
- "(65.599998, 61.413574)"
- "(66.000000, 61.018066)"
- "(66.400002, 60.637207)"
- "(66.800003, 60.263672)"
- "(67.199997, 59.897461)"
- "(67.599998, 59.545898)"
- "(68.000000, 59.194336)"
- "(68.400002, 58.857422)"
- "(68.800003, 58.520508)"
- "(69.199997, 58.190918)"
- "(69.699997, 57.890625)"
- "(70.099998, 57.597656)"
- "(70.500000, 57.282715)"
- "(71.000000, 56.989746)"
- "(71.400002, 56.718750)"
- "(71.800003, 56.425781)"
- "(72.300003, 56.169434)"
- "(72.800003, 55.920410)"
- "(73.199997, 55.642090)"
- "(73.699997, 55.407715)"
- "(74.199997, 55.180664)"
- "(74.699997, 54.953613)"
- "(75.199997, 54.733887)"
- "(75.699997, 54.521484)"
- "(76.199997, 54.309082)"
- "(76.699997, 54.111328)"
- "(77.300003, 53.957520)"
- "(77.800003, 53.774414)"
- "(78.400002, 53.627930)"
- "(79.000000, 53.496094)"
- "(79.599998, 53.378906)"
- "(80.199997, 53.261719)"
- "(80.800003, 53.166504)"
- "(81.400002, 53.078613)"
- "(82.099998, 53.034668)"
- "(82.800003, 53.005371)"
- "(83.500000, 52.990723)"
- "(84.199997, 52.998047)"
- "(84.900002, 53.012695)"
- "(85.699997, 53.085938)"
- "(86.500000, 53.173828)"
- "(87.300003, 53.283691)"
- "(88.199997, 53.444824)"
- "(89.000000, 53.598633)"
- "(90.000000, 53.811035)"
- "(90.900002, 54.074707)"
- "(91.900002, 54.367676)"
- "(92.900002, 54.689941)"
- "(94.000000, 55.070801)"
- "(95.099998, 55.488281)"
- "(96.300003, 55.971680)"
- "(96.099998, 56.074219)"
- "(95.699997, 56.162109)"
- "(95.300003, 56.286621)"
- "(94.900002, 56.447754)"
- "(94.500000, 56.645508)"
- "(94.099998, 56.894531)"
- "(93.699997, 57.187500)"
- "(93.300003, 57.517090)"
- "(92.900002, 57.897949)"
- "(92.500000, 58.330078)"
- "(92.099998, 58.806152)"
- "(91.699997, 59.340820)"
- "(91.300003, 59.919434)"
- "(90.900002, 60.556641)"
- "(90.500000, 61.245117)"
- "(90.099998, 61.992188)"
- "(89.699997, 62.797852)"
- "(89.300003, 63.662109)"
- "(88.900002, 64.584961)"
- "(88.400002, 65.544434)"
- "(88.000000, 66.599121)"
- "(87.599998, 67.719727)"
- "(87.199997, 68.913574)"
- "(86.800003, 70.180664)"
- "(86.300003, 71.477051)"
- "(85.900002, 72.897949)"
- "(85.500000, 74.392090)"
- "(85.000000, 75.922852)"
- "(84.599998, 77.585449)"
- "(84.099998, 79.291992)"
- "(83.599998, 81.086426)"
- "(83.699997, 79.907227)"
- "(83.800003, 77.922363)"
- "(84.000000, 76.149902)"
- "(84.199997, 74.523926)"
- "(84.300003, 72.985840)"
- "(84.500000, 71.608887)"
- "(84.699997, 70.341797)"
- "(84.800003, 69.118652)"
- "(85.000000, 68.027344)"
- "(85.199997, 67.009277)"
- "(85.400002, 66.020508)"
- "(85.500000, 65.119629)"
- "(85.699997, 64.284668)"
- "(85.800003, 63.457031)"
- "(86.000000, 62.717285)"
- "(86.199997, 62.006836)"
- "(86.300003, 61.303711)"
- "(86.500000, 60.659180)"
- "(86.699997, 60.029297)"
- "(86.800003, 59.428711)"
- "(87.000000, 58.864746)"
- "(87.099998, 58.286133)"
- "(87.300003, 57.758789)"
- "(87.400002, 57.216797)"
- "(87.599998, 56.718750)"
- "(87.699997, 56.198730)"
- "(87.900002, 55.700684)"
- "(88.000000, 55.231934)"
- "(88.099998, 54.741211)"
- "(88.300003, 54.287109)"
- "(88.400002, 53.811035)"
- "(88.500000, 53.342285)"
- "(88.699997, 52.910156)"
- "(88.800003, 52.448730)"
- "(88.900002, 51.987305)"
- "(89.000000, 51.533203)"
- "(89.199997, 51.108398)"
- "(89.300003, 50.661621)"
- "(89.400002, 50.207520)"
- "(89.500000, 49.760742)"
- "(89.599998, 49.313965)"
- "(89.800003, 48.881836)"
- "(89.900002, 48.457031)"
- "(90.000000, 48.017578)"
- "(90.099998, 47.578125)"
- "(90.199997, 47.145996)"
- "(90.300003, 46.706543)"
- "(90.400002, 46.274414)"
- "(90.500000, 45.849609)"
- "(90.599998, 45.424805)"
- "(90.699997, 45.000000)"
- "(90.800003, 44.582520)"
- "(90.900002, 44.172363)"
- "(91.000000, 43.762207)"
- "(90.699997, 43.264160)"
- "(90.000000, 42.670898)"
- "(89.199997, 42.062988)"
- "(88.500000, 41.491699)"
- "(87.800003, 40.935059)"
- "(87.099998, 40.385742)"
- "(86.400002, 39.851074)"
- "(85.699997, 39.323730)"
- "(85.099998, 38.840332)"
- "(84.400002, 38.342285)"
- "(83.800003, 37.888184)"
- "(83.099998, 37.426758)"
- "(82.500000, 36.994629)"
- "(81.900002, 36.584473)"
- "(81.199997, 36.174316)"
- "(80.599998, 35.793457)"
- "(80.000000, 35.434570)"
- "(79.400002, 35.097656)"
- "(78.800003, 34.775391)"
- "(78.199997, 34.475098)"
- "(77.699997, 34.204102)"
- "(77.099998, 33.962402)"
- "(76.500000, 33.720703)"
- "(75.900002, 33.508301)"
- "(75.400002, 33.325195)"
- "(74.800003, 33.164062)"
- "(74.199997, 33.017578)"
- "(73.699997, 32.915039)"
- "(73.099998, 32.812500)"
- "(72.599998, 32.761230)"
- "(72.000000, 32.702637)"
- "(71.500000, 32.702637)"
- "(70.900002, 32.702637)"
- "(70.400002, 32.746582)"
- "(69.800003, 32.797852)"
- "(69.300003, 32.893066)"
- "(68.699997, 32.995605)"
- "(68.199997, 33.149414)"
- "(67.699997, 33.317871)"
- "(67.099998, 33.508301)"
- "(66.599998, 33.742676)"
- "(66.000000, 33.984375)"
- "(65.500000, 34.270020)"
- "(64.900002, 34.562988)"
- "(64.400002, 34.914551)"
- "(63.799999, 35.258789)"
- "(63.299999, 35.661621)"
- "(62.700001, 36.064453)"
- "(62.099998, 36.496582)"
- "(61.599998, 36.987305)"
- "(61.000000, 37.478027)"
- "(60.400002, 37.998047)"
- "(59.799999, 38.547363)"
- "(59.200001, 39.118652)"
- "(58.599998, 39.726562)"
- "(58.000000, 40.356445)"
- "(57.400002, 41.022949)"
- "(56.799999, 41.718750)"
- "(56.200001, 42.436523)"
- "(55.500000, 43.161621)"
- "(54.900002, 43.945312)"
- "(54.200001, 44.729004)"
- "(53.500000, 45.534668)"
- "(52.900002, 46.376953)"
- "(52.099998, 47.241211)"
- "(51.400002, 48.142090)"
- "(50.700001, 49.079590)"
- "(50.000000, 50.002441)"
- "(49.200001, 50.998535)"
- "(48.400002, 51.987305)"
- "(47.599998, 53.005371)"
- "(46.799999, 54.038086)"
- "(45.900002, 55.092773)"
- "(45.099998, 56.176758)"
- "(44.200001, 57.290039)"
- "(43.299999, 58.403320)"
- "(42.299999, 59.560547)"
- "(41.400002, 60.703125)"
- "(40.400002, 61.882324)"
- "(39.299999, 63.068848)"
- "(38.299999, 64.284668)"
- "(37.200001, 65.493164)"
- "(36.099998, 66.679688)"
- "(35.000000, 67.844238)"
- "(33.799999, 69.030762)"
- "(32.599998, 70.173340)"
- "(31.700001, 71.066895)"
- "(32.099998, 71.337891)"
- "(32.400002, 71.608887)"
- "(32.700001, 71.865234)"
- "(33.000000, 72.084961)"
- "(33.400002, 72.282715)"
- "(33.700001, 72.509766)"
- "(34.000000, 72.663574)"
- "(34.400002, 72.861328)"
- "(34.700001, 72.993164)"
- "(35.099998, 73.168945)"
- "(35.500000, 73.271484)"
- "(35.799999, 73.381348)"
- "(36.200001, 73.505859)"
- "(36.599998, 73.593750)"
- "(37.000000, 73.666992)"
- "(37.400002, 73.725586)"
- "(37.799999, 73.784180)"
- "(38.200001, 73.828125)"
- "(38.599998, 73.828125)"
- "(39.099998, 73.842773)"
- "(39.500000, 73.886719)"
- "(40.000000, 73.850098)"
- "(40.400002, 73.872070)"
- "(40.900002, 73.864746)"
- "(41.400002, 73.828125)"
- "(41.900002, 73.806152)"
- "(42.400002, 73.784180)"
- "(42.900002, 73.776855)"
- "(43.400002, 73.725586)"
- "(44.000000, 73.696289)"
- "(44.500000, 73.659668)"
- "(45.099998, 73.659668)"
- "(45.700001, 73.637695)"
- "(46.299999, 73.615723)"
- "(46.900002, 73.579102)"
- "(47.599998, 73.571777)"
- "(48.200001, 73.571777)"
- "(48.900002, 73.601074)"
- "(49.599998, 73.623047)"
- "(50.299999, 73.645020)"
- "(51.099998, 73.710938)"
- "(51.799999, 73.754883)"
- "(52.599998, 73.842773)"
- "(53.500000, 73.937988)"
- "(54.299999, 74.099121)"
- "(55.200001, 74.238281)"
- "(56.099998, 74.414062)"
- "(57.000000, 74.619141)"
- "(58.000000, 74.838867)"
- "(59.000000, 75.095215)"
- "(60.000000, 75.395508)"
- "(60.400002, 75.263672)"
- "(60.000000, 74.626465)"
- "(59.599998, 74.011230)"
- "(59.299999, 73.454590)"
- "(58.900002, 72.941895)"
- "(58.500000, 72.407227)"
- "(58.200001, 71.975098)"
- "(57.900002, 71.572266)"
- "(57.599998, 71.198730)"
- "(57.299999, 70.854492)"
- "(57.000000, 70.539551)"
- "(56.700001, 70.261230)"
- "(56.400002, 70.004883)"
- "(56.200001, 69.843750)"
- "(55.900002, 69.667969)"
- "(55.700001, 69.572754)"
- "(55.400002, 69.455566)"
- "(55.200001, 69.426270)"
- "(55.000000, 69.433594)"
- "(54.799999, 69.477539)"
- "(54.599998, 69.543457)"
- "(54.400002, 69.653320)"
- "(54.200001, 69.792480)"
- "(54.000000, 69.968262)"
- "(53.799999, 70.173340)"
