tests/snapshots/snapshot_tests__eccentricity_cam16_lut.snap
---
source: tests/snapshot_tests.rs
expression: values
---
- "0.8459632993"
- "0.8420117497"
- "0.8380931616"
- "0.8342086077"
- "0.8303593993"
- "0.8265465498"
- "0.8227713704"
- "0.8190348744"
- "0.8153383136"
- "0.8116828203"
- "0.8080694079"
- "0.8044992089"
- "0.8009733558"
- "0.7974928617"
- "0.7940588593"
- "0.7906723619"
- "0.7873343825"
- "0.7840459943"
- "0.7808080912"
- "0.7776218057"
- "0.7744879723"
- "0.7714076042"
- "0.7683816552"
- "0.7654110193"
- "0.7624965906"
- "0.7596393228"
- "0.7568399906"
- "0.7540994883"
- "0.7514187098"
- "0.7487984300"
- "0.7462393641"
- "0.7437424064"
- "0.7413083315"
- "0.7389377356"
- "0.7366315126"
- "0.7343901992"
- "0.7322146297"
- "0.7301054001"
- "0.7280631065"
- "0.7260884643"
- "0.7241819501"
- "0.7223442793"
- "0.7205759883"
- "0.7188775539"
- "0.7172495127"
- "0.7156923413"
- "0.7142065763"
- "0.7127926350"
- "0.7114509344"
- "0.7101818919"
- "0.7089859247"
- "0.7078633904"
- "0.7068145871"
- "0.7058398128"
- "0.7049394846"
- "0.7041137815"
- "0.7033630013"
- "0.7026873231"
- "0.7020869851"
- "0.7015621066"
- "0.7011129856"
- "0.7007396221"
- "0.7004422545"
- "0.7002208233"
- "0.7000755072"
- "0.7000063658"
- "0.7000133395"
- "0.7000964284"
- "0.7002556920"
- "0.7004910111"
- "0.7008023262"
- "0.7011895776"
- "0.7016525865"
- "0.7021912336"
- "0.7028053999"
- "0.7034948468"
- "0.7042593956"
- "0.7050988078"
- "0.7060127854"
- "0.7070010900"
- "0.7080634236"
- "0.7091994286"
- "0.7104088664"
- "0.7116912007"
- "0.7130461335"
- "0.7144733071"
- "0.7159721851"
- "0.7175423503"
- "0.7191832662"
- "0.7208945751"
- "0.7226756215"
- "0.7245259285"
- "0.7264449596"
- "0.7284320593"
- "0.7304866314"
- "0.7326080799"
- "0.7347957492"
- "0.7370489836"
- "0.7393670678"
- "0.7417492867"
- "0.7441949844"
- "0.7467033863"
- "0.7492736578"
- "0.7519051433"
- "0.7545968890"
- "0.7573482394"
- "0.7601581812"
- "0.7630259991"
- "0.7659507990"
- "0.7689316273"
- "0.7719676495"
- "0.7750578523"
- "0.7782013416"
- "0.7813972235"
- "0.7846444249"
- "0.7879419923"
- "0.7912889123"
- "0.7946841717"
- "0.7981267571"
- "0.8016156554"
- "0.8051496744"
- "0.8087278605"
- "0.8123490810"
- "0.8160122037"
- "0.8197161555"
- "0.8234598041"
- "0.8272419572"
- "0.8310615420"
- "0.8349173665"
- "0.8388082385"
- "0.8427329659"
- "0.8466903567"
- "0.8506792188"
- "0.8546983600"
- "0.8587465286"
- "0.8628224730"
- "0.8669250011"
- "0.8710528016"
- "0.8752046824"
- "0.8793793321"
- "0.8835754395"
- "0.8877918720"
- "0.8920271993"
- "0.8962801695"
- "0.9005495906"
- "0.9048339725"
- "0.9091321826"
- "0.9134427905"
- "0.9177646041"
- "0.9220961928"
- "0.9264362454"
- "0.9307835102"
- "0.9351366162"
- "0.9394943118"
- "0.9438551068"
- "0.9482178688"
- "0.9525811076"
- "0.9569435716"
- "0.9613039494"
- "0.9656608701"
- "0.9700130224"
- "0.9743590951"
- "0.9786977172"
- "0.9830275774"
- "0.9873474240"
- "0.9916558862"
- "0.9959516525"
- "1.0002334118"
- "1.0044999123"
- "1.0087497234"
- "1.0129816532"
- "1.0171945095"
- "1.0213867426"
- "1.0255573988"
- "1.0297049284"
- "1.0338281393"
- "1.0379259586"
- "1.0419968367"
- "1.0460398197"
- "1.0500534773"
- "1.0540367365"
- "1.0579881668"
- "1.0619068146"
- "1.0657913685"
- "1.0696406364"
- "1.0734534264"
- "1.0772286654"
- "1.0809651613"
- "1.0846617222"
- "1.0883171558"
- "1.0919306278"
- "1.0955008268"
- "1.0990266800"
- "1.1025071144"
- "1.1059410572"
- "1.1093276739"
- "1.1126655340"
- "1.1159540415"
- "1.1191918850"
- "1.1223782301"
- "1.1255120039"
- "1.1285923719"
- "1.1316183805"
- "1.1345889568"
- "1.1375033855"
- "1.1403607130"
- "1.1431599855"
- "1.1459004879"
- "1.1485812664"
- "1.1512016058"
- "1.1537605524"
- "1.1562575102"
- "1.1586916447"
- "1.1610622406"
- "1.1633684635"
- "1.1656098366"
- "1.1677854061"
- "1.1698945761"
- "1.1719368696"
- "1.1739115715"
- "1.1758179665"
- "1.1776556969"
- "1.1794240475"
- "1.1811224222"
- "1.1827504635"
- "1.1843076944"
- "1.1857933998"
- "1.1872073412"
- "1.1885490417"
- "1.1898181438"
- "1.1910140514"
- "1.1921366453"
- "1.1931854486"
- "1.1941601038"
- "1.1950604916"
- "1.1958862543"
- "1.1966370344"
- "1.1973127127"
- "1.1979130507"
- "1.1984379292"
- "1.1988869905"
- "1.1992603540"
- "1.1995577812"
- "1.1997791529"
- "1.1999244690"
- "1.1999936104"
- "1.1999866962"
- "1.1999036074"
- "1.1997443438"
- "1.1995090246"
- "1.1991976500"
- "1.1988104582"
- "1.1983474493"
- "1.1978087425"
- "1.1971945763"
- "1.1965051889"
- "1.1957405806"
- "1.1949012280"
- "1.1939872503"
- "1.1929988861"
- "1.1919366121"
- "1.1908005476"
- "1.1895911694"
- "1.1883088350"
- "1.1869539022"
- "1.1855267286"
- "1.1840277910"
- "1.1824576855"
- "1.1808166504"
- "1.1791054010"
- "1.1773244143"
- "1.1754740477"
- "1.1735550165"
- "1.1715679169"
- "1.1695133448"
- "1.1673918962"
- "1.1652042866"
- "1.1629509926"
- "1.1606329679"
- "1.1582506895"
- "1.1558049917"
- "1.1532965899"
- "1.1507263184"
- "1.1480948925"
- "1.1454031467"
- "1.1426517963"
- "1.1398417950"
- "1.1369739771"
- "1.1340491772"
- "1.1310683489"
- "1.1280323267"
- "1.1249421835"
- "1.1217986345"
- "1.1186027527"
- "1.1153556108"
- "1.1120580435"
- "1.1087111235"
- "1.1053158045"
- "1.1018731594"
- "1.0983843803"
- "1.0948503017"
- "1.0912721157"
- "1.0876508951"
- "1.0839878321"
- "1.0802838802"
- "1.0765402317"
- "1.0727580786"
- "1.0689384937"
- "1.0650826693"
- "1.0611917973"
- "1.0572670698"
- "1.0533096790"
- "1.0493208170"
- "1.0453016758"
- "1.0412534475"
- "1.0371775627"
- "1.0330749750"
- "1.0289472342"
- "1.0247952938"
- "1.0206207037"
- "1.0164245367"
- "1.0122081041"
- "1.0079728365"
- "1.0037198067"
- "0.9994504452"
- "0.9951660037"
- "0.9908678532"
- "0.9865571856"
- "0.9822354317"
- "0.9779038429"
- "0.9735637307"
- "0.9692164660"
- "0.9648633599"
- "0.9605057240"
- "0.9561448693"
- "0.9517821670"
- "0.9474188685"
- "0.9430564046"
- "0.9386960268"
- "0.9343391061"
- "0.9299869537"
- "0.9256409407"
- "0.9213023186"
- "0.9169723988"
- "0.9126525521"
- "0.9083441496"
- "0.9040483832"
- "0.8997666240"
- "0.8955001235"
- "0.8912502527"
- "0.8870183229"
- "0.8828055263"
- "0.8786132336"
- "0.8744426370"
- "0.8702951074"
- "0.8661717772"
- "0.8620740771"
- "0.8580030799"
- "0.8539601564"
- "0.8499464989"
