tests/snapshots/snapshot_tests__eccentricity_lut.snap
---
source: tests/snapshot_tests.rs
expression: values
---
- "0.8101999760"
- "0.8093742728"
- "0.8088191748"
- "0.8085275888"
- "0.8084919453"
- "0.8087044358"
- "0.8091569543"
- "0.8098412752"
- "0.8107488155"
- "0.8118708730"
- "0.8131986260"
- "0.8147230744"
- "0.8164350986"
- "0.8183254600"
- "0.8203849196"
- "0.8226040006"
- "0.8249734640"
- "0.8274837136"
- "0.8301252723"
- "0.8328887820"
- "0.8357647061"
- "0.8387435079"
- "0.8418158293"
- "0.8449721932"
- "0.8482031822"
- "0.8514995575"
- "0.8548519015"
- "0.8582510948"
- "0.8616877794"
- "0.8651530147"
- "0.8686375618"
- "0.8721325994"
- "0.8756290674"
- "0.8791181445"
- "0.8825911283"
- "0.8860393167"
- "0.8894541264"
- "0.8928270340"
- "0.8961496949"
- "0.8994137645"
- "0.9026110768"
- "0.9057336450"
- "0.9087734222"
- "0.9117226601"
- "0.9145736694"
- "0.9173190594"
- "0.9199513197"
- "0.9224633574"
- "0.9248481989"
- "0.9270990491"
- "0.9292093515"
- "0.9311727881"
- "0.9329832196"
- "0.9346348643"
- "0.9361221194"
- "0.9374397993"
- "0.9385829568"
- "0.9395470023"
- "0.9403276443"
- "0.9409210682"
- "0.9413238168"
- "0.9415328503"
- "0.9415454865"
- "0.9413595796"
- "0.9409735203"
- "0.9403860569"
- "0.9395965338"
- "0.9386048913"
- "0.9374114275"
- "0.9360172153"
- "0.9344237447"
- "0.9326332808"
- "0.9306485057"
- "0.9284729362"
- "0.9261105061"
- "0.9235659838"
- "0.9208445549"
- "0.9179523587"
- "0.9148959517"
- "0.9116826057"
- "0.9083203077"
- "0.9048176408"
- "0.9011837840"
- "0.8974286318"
- "0.8935626745"
- "0.8895969987"
- "0.8855432272"
- "0.8814136386"
- "0.8772209287"
- "0.8729784489"
- "0.8687000275"
- "0.8643997312"
- "0.8600924015"
- "0.8557929397"
- "0.8515167832"
- "0.8472796082"
- "0.8430973291"
- "0.8389861584"
- "0.8349624276"
- "0.8310424685"
- "0.8272429109"
- "0.8235802650"
- "0.8200708628"
- "0.8167312145"
- "0.8135774732"
- "0.8106256127"
- "0.8078913689"
- "0.8053901196"
- "0.8031367660"
- "0.8011459708"
- "0.7994316816"
- "0.7980073094"
- "0.7968857288"
- "0.7960790396"
- "0.7955986261"
- "0.7954550385"
- "0.7956581116"
- "0.7962165475"
- "0.7971383929"
- "0.7984305024"
- "0.8000986576"
- "0.8021478057"
- "0.8045815825"
- "0.8074024916"
- "0.8106120229"
- "0.8142102957"
- "0.8181962371"
- "0.8225677013"
- "0.8273211122"
- "0.8324517608"
- "0.8379535675"
- "0.8438192010"
- "0.8500402570"
- "0.8566069007"
- "0.8635081053"
- "0.8707317114"
- "0.8782641888"
- "0.8860911131"
- "0.8941967487"
- "0.9025643468"
- "0.9111760259"
- "0.9200130701"
- "0.9290556312"
- "0.9382831454"
- "0.9476740956"
- "0.9572063088"
- "0.9668567777"
- "0.9766019583"
- "0.9864177704"
- "0.9962795973"
- "1.0061624050"
- "1.0160409212"
- "1.0258896351"
- "1.0356827974"
- "1.0453947783"
- "1.0549997091"
- "1.0644719601"
- "1.0737862587"
- "1.0829174519"
- "1.0918409824"
- "1.1005322933"
- "1.1089680195"
- "1.1171249151"
- "1.1249808073"
- "1.1325142384"
- "1.1397047043"
- "1.1465324163"
- "1.1529791355"
- "1.1590272188"
- "1.1646606922"
- "1.1698644161"
- "1.1746249199"
- "1.1789299250"
- "1.1827687025"
- "1.1861319542"
- "1.1890118122"
- "1.1914021969"
- "1.1932983398"
- "1.1946973801"
- "1.1955977678"
- "1.1959999800"
- "1.1959059238"
- "1.1953191757"
- "1.1942449808"
- "1.1926903725"
- "1.1906638145"
- "1.1881755590"
- "1.1852372885"
- "1.1818624735"
- "1.1780658960"
- "1.1738636494"
- "1.1692737341"
- "1.1643151045"
- "1.1590081453"
- "1.1533744335"
- "1.1474367380"
- "1.1412189007"
- "1.1347458363"
- "1.1280432940"
- "1.1211378574"
- "1.1140569448"
- "1.1068283319"
- "1.0994807482"
- "1.0920432806"
- "1.0845450163"
- "1.0770157576"
- "1.0694850683"
- "1.0619828701"
- "1.0545388460"
- "1.0471824408"
- "1.0399429798"
- "1.0328493118"
- "1.0259298086"
- "1.0192124844"
- "1.0127242804"
- "1.0064915419"
- "1.0005397797"
- "0.9948936105"
- "0.9895763993"
- "0.9846104980"
- "0.9800170660"
- "0.9758158326"
- "0.9720253348"
- "0.9686626196"
- "0.9657431245"
- "0.9632809758"
- "0.9612885118"
- "0.9597765207"
- "0.9587540627"
- "0.9582285881"
- "0.9582056999"
- "0.9586893320"
- "0.9596815109"
- "0.9611827135"
- "0.9631913900"
- "0.9657045007"
- "0.9687169194"
- "0.9722220898"
- "0.9762115479"
- "0.9806752205"
- "0.9856013060"
- "0.9909765720"
- "0.9967859983"
- "1.0030132532"
- "1.0096403360"
- "1.0166482925"
- "1.0240162611"
- "1.0317226648"
- "1.0397444963"
- "1.0480575562"
- "1.0566369295"
- "1.0654567480"
- "1.0744900703"
- "1.0837094784"
- "1.0930867195"
- "1.1025933027"
- "1.1121999025"
- "1.1218771935"
- "1.1315953732"
- "1.1413246393"
- "1.1510351896"
- "1.1606971025"
- "1.1702808142"
- "1.1797567606"
- "1.1890959740"
- "1.1982698441"
- "1.2072502375"
- "1.2160097361"
- "1.2245217562"
- "1.2327601910"
- "1.2407000065"
- "1.2483171225"
- "1.2555885315"
- "1.2624921799"
- "1.2690073252"
- "1.2751141787"
- "1.2807947397"
- "1.2860317230"
- "1.2908096313"
- "1.2951141596"
- "1.2989325523"
- "1.3022534847"
- "1.3050671816"
- "1.3073652983"
- "1.3091409206"
- "1.3103890419"
- "1.3111056089"
- "1.3112887144"
- "1.3109375238"
- "1.3100528717"
- "1.3086371422"
- "1.3066939116"
- "1.3042286634"
- "1.3012477160"
- "1.2977592945"
- "1.2937725782"
- "1.2892980576"
- "1.2843476534"
- "1.2789343596"
- "1.2730721235"
- "1.2667762041"
- "1.2600626945"
- "1.2529486418"
- "1.2454521656"
- "1.2375918627"
- "1.2293871641"
- "1.2208583355"
- "1.2120261192"
- "1.2029117346"
- "1.1935367584"
- "1.1839233637"
- "1.1740939617"
- "1.1640709639"
- "1.1538771391"
- "1.1435352564"
- "1.1330683231"
- "1.1224988699"
- "1.1118497849"
- "1.1011432409"
- "1.0904016495"
- "1.0796468258"
- "1.0689003468"
- "1.0581831932"
- "1.0475159883"
- "1.0369189978"
- "1.0264116526"
- "1.0160127878"
- "1.0057406425"
- "0.9956129193"
- "0.9856463671"
- "0.9758570790"
- "0.9662602544"
- "0.9568704963"
- "0.9477014542"
- "0.9387658238"
- "0.9300756454"
- "0.9216420650"
- "0.9134751558"
- "0.9055843949"
- "0.8979781866"
- "0.8906641006"
- "0.8836488128"
- "0.8769382834"
- "0.8705374599"
- "0.8644505143"
- "0.8586807251"
- "0.8532307148"
- "0.8481022120"
- "0.8432961702"
- "0.8388128281"
- "0.8346517682"
- "0.8308117390"
- "0.8272909522"
- "0.8240869045"
- "0.8211965561"
- "0.8186162710"
- "0.8163417578"
- "0.8143683076"
- "0.8126907349"
- "0.8113033175"
