tests/snapshots/snapshot_tests__gamma_lut.snap
---
source: tests/snapshot_tests.rs
expression: values
---
- "0.0000000000"
- "0.0000016761"
- "0.0000088466"
- "0.0000234096"
- "0.0000466925"
- "0.0000797685"
- "0.0001235568"
- "0.0001788706"
- "0.0002464447"
- "0.0003269532"
- "0.0004210208"
- "0.0005292319"
- "0.0006521366"
- "0.0007902557"
- "0.0009440845"
- "0.0011140959"
- "0.0013007431"
- "0.0015044612"
- "0.0017256693"
- "0.0019647722"
- "0.0022221612"
- "0.0024982154"
- "0.0027933027"
- "0.0031077808"
- "0.0034419975"
- "0.0037962918"
- "0.0041709944"
- "0.0045664279"
- "0.0049829077"
- "0.0054207423"
- "0.0058802336"
- "0.0063616773"
- "0.0068653632"
- "0.0073915756"
- "0.0079405936"
- "0.0085126911"
- "0.0091081373"
- "0.0097271968"
- "0.0103701300"
- "0.0110371927"
- "0.0117286370"
- "0.0124447112"
- "0.0131856597"
- "0.0139517235"
- "0.0147431400"
- "0.0155601436"
- "0.0164029652"
- "0.0172718328"
- "0.0181669716"
- "0.0190886036"
- "0.0200369483"
- "0.0210122224"
- "0.0220146402"
- "0.0230444132"
- "0.0241017507"
- "0.0251868596"
- "0.0262999445"
- "0.0274412077"
- "0.0286108494"
- "0.0298090678"
- "0.0310360589"
- "0.0322920169"
- "0.0335771338"
- "0.0348916000"
- "0.0362356040"
- "0.0376093323"
- "0.0390129699"
- "0.0404467000"
- "0.0419107041"
- "0.0434051623"
- "0.0449302529"
- "0.0464861526"
- "0.0480730369"
- "0.0496910795"
- "0.0513404528"
- "0.0530213278"
- "0.0547338740"
- "0.0564782599"
- "0.0582546522"
- "0.0600632165"
- "0.0619041174"
- "0.0637775177"
- "0.0656835796"
- "0.0676224636"
- "0.0695943293"
- "0.0715993350"
- "0.0736376381"
- "0.0757093946"
- "0.0778147596"
- "0.0799538872"
- "0.0821269302"
- "0.0843340406"
- "0.0865753693"
- "0.0888510662"
- "0.0911612802"
- "0.0935061594"
- "0.0958858508"
- "0.0983005005"
- "0.1007502537"
- "0.1032352548"
- "0.1057556471"
- "0.1083115732"
- "0.1109031749"
- "0.1135305930"
- "0.1161939675"
- "0.1188934378"
- "0.1216291421"
- "0.1244012183"
- "0.1272098030"
- "0.1300550325"
- "0.1329370421"
- "0.1358559664"
- "0.1388119392"
- "0.1418050937"
- "0.1448355624"
- "0.1479034770"
- "0.1510089685"
- "0.1541521673"
- "0.1573332031"
- "0.1605522049"
- "0.1638093011"
- "0.1671046194"
- "0.1704382870"
- "0.1738104302"
- "0.1772211749"
- "0.1806706463"
- "0.1841589691"
- "0.1876862673"
- "0.1912526644"
- "0.1948582831"
- "0.1985032458"
- "0.2021876742"
- "0.2059116894"
- "0.2096754121"
- "0.2134789623"
- "0.2173224595"
- "0.2212060226"
- "0.2251297702"
- "0.2290938202"
- "0.2330982900"
- "0.2371432965"
- "0.2412289560"
- "0.2453553846"
- "0.2495226976"
- "0.2537310099"
- "0.2579804360"
- "0.2622710898"
- "0.2666030849"
- "0.2709765342"
- "0.2753915505"
- "0.2798482457"
- "0.2843467315"
- "0.2888871191"
- "0.2934695195"
- "0.2980940427"
- "0.3027607989"
- "0.3074698975"
- "0.3122214474"
- "0.3170155575"
- "0.3218523358"
- "0.3267318903"
- "0.3316543283"
- "0.3366197568"
- "0.3416282824"
- "0.3466800115"
- "0.3517750497"
- "0.3569135026"
- "0.3620954751"
- "0.3673210720"
- "0.3725903976"
- "0.3779035557"
- "0.3832606501"
- "0.3886617838"
- "0.3941070597"
- "0.3995965802"
- "0.4051304476"
- "0.4107087635"
- "0.4163316294"
- "0.4219991464"
- "0.4277114152"
- "0.4334685362"
- "0.4392706095"
- "0.4451177347"
- "0.4510100114"
- "0.4569475385"
- "0.4629304148"
- "0.4689587388"
- "0.4750326085"
- "0.4811521217"
- "0.4873173759"
- "0.4935284683"
- "0.4997854958"
- "0.5060885548"
- "0.5124377417"
- "0.5188331523"
- "0.5252748824"
- "0.5317630273"
- "0.5382976821"
- "0.5448789415"
- "0.5515069000"
- "0.5581816518"
- "0.5649032909"
- "0.5716719108"
- "0.5784876050"
- "0.5853504665"
- "0.5922605880"
- "0.5992180623"
- "0.6062229814"
- "0.6132754374"
- "0.6203755220"
- "0.6275233267"
- "0.6347189427"
- "0.6419624609"
- "0.6492539720"
- "0.6565935664"
- "0.6639813343"
- "0.6714173656"
- "0.6789017501"
- "0.6864345770"
- "0.6940159356"
- "0.7016459148"
- "0.7093246032"
- "0.7170520894"
- "0.7248284616"
- "0.7326538076"
- "0.7405282152"
- "0.7484517720"
- "0.7564245651"
- "0.7644466816"
- "0.7725182083"
- "0.7806392318"
- "0.7888098384"
- "0.7970301143"
- "0.8053001452"
- "0.8136200170"
- "0.8219898151"
- "0.8304096246"
- "0.8388795306"
- "0.8473996180"
- "0.8559699713"
- "0.8645906748"
- "0.8732618128"
- "0.8819834692"
- "0.8907557277"
- "0.8995786718"
- "0.9084523850"
- "0.9173769503"
- "0.9263524507"
- "0.9353789688"
- "0.9444565872"
- "0.9535853883"
- "0.9627654540"
- "0.9719968664"
- "0.9812797073"
- "0.9906140580"
- "1.0000000000"
