tests/snapshots/snapshot_tests__hk_hue_lut.snap
---
source: tests/snapshot_tests.rs
expression: values
---
- "0.7639999986"
- "0.7596676946"
- "0.7552221417"
- "0.7506623864"
- "0.7459875941"
- "0.7411972284"
- "0.7362908721"
- "0.7312683463"
- "0.7261295319"
- "0.7208747268"
- "0.7155042887"
- "0.7100188136"
- "0.7044190764"
- "0.6987060905"
- "0.6928811073"
- "0.6869454980"
- "0.6809008718"
- "0.6747490764"
- "0.6684921384"
- "0.6621322632"
- "0.6556718946"
- "0.6491136551"
- "0.6424604654"
- "0.6357151866"
- "0.6288812160"
- "0.6219618917"
- "0.6149607897"
- "0.6078818440"
- "0.6007288694"
- "0.5935061574"
- "0.5862179399"
- "0.5788688660"
- "0.5714635253"
- "0.5640067458"
- "0.5565036535"
- "0.5489592552"
- "0.5413790345"
- "0.5337682962"
- "0.5261327028"
- "0.5184780359"
- "0.5108100772"
- "0.5031348467"
- "0.4954584539"
- "0.4877870381"
- "0.4801269770"
- "0.4724846780"
- "0.4648665786"
- "0.4572792947"
- "0.4497294426"
- "0.4422237575"
- "0.4347690344"
- "0.4273720980"
- "0.4200397730"
- "0.4127790332"
- "0.4055967629"
- "0.3984999359"
- "0.3914955556"
- "0.3845905662"
- "0.3777919710"
- "0.3711067140"
- "0.3645417392"
- "0.3581039906"
- "0.3518003225"
- "0.3456375897"
- "0.3396225870"
- "0.3337620199"
- "0.3280625641"
- "0.3225308359"
- "0.3171733022"
- "0.3119964004"
- "0.3070064187"
- "0.3022095561"
- "0.2976119816"
- "0.2932195663"
- "0.2890382409"
- "0.2850736380"
- "0.2813313603"
- "0.2778168321"
- "0.2745352685"
- "0.2714917958"
- "0.2686913311"
- "0.2661386132"
- "0.2638381720"
- "0.2617944181"
- "0.2600115240"
- "0.2584934533"
- "0.2572439909"
- "0.2562666833"
- "0.2555648685"
- "0.2551416755"
- "0.2549999952"
- "0.2551425099"
- "0.2555716634"
- "0.2562896311"
- "0.2572983503"
- "0.2585995793"
- "0.2601947784"
- "0.2620851099"
- "0.2642715871"
- "0.2667549253"
- "0.2695355415"
- "0.2726136446"
- "0.2759891748"
- "0.2796617746"
- "0.2836309373"
- "0.2878957391"
- "0.2924551070"
- "0.2973076403"
- "0.3024517596"
- "0.3078855574"
- "0.3136068285"
- "0.3196132481"
- "0.3259020746"
- "0.3324704170"
- "0.3393151164"
- "0.3464327455"
- "0.3538196087"
- "0.3614718318"
- "0.3693852127"
- "0.3775553703"
- "0.3859776855"
- "0.3946472704"
- "0.4035590887"
- "0.4127078056"
- "0.4220878780"
- "0.4316935837"
- "0.4415189922"
- "0.4515579641"
- "0.4618041217"
- "0.4722509980"
- "0.4828918278"
- "0.4937197566"
- "0.5047277212"
- "0.5159085393"
- "0.5272547007"
- "0.5387588143"
- "0.5504131913"
- "0.5622099638"
- "0.5741412640"
- "0.5861990452"
- "0.5983750820"
- "0.6106611490"
- "0.6230488420"
- "0.6355298162"
- "0.6480954289"
- "0.6607370973"
- "0.6734462380"
- "0.6862140894"
- "0.6990318894"
- "0.7118907571"
- "0.7247820497"
- "0.7376967669"
- "0.7506260872"
- "0.7635611892"
- "0.7764931917"
- "0.7894132733"
- "0.8023126125"
- "0.8151823878"
- "0.8280139565"
- "0.8407984972"
- "0.8535275459"
- "0.8661924005"
- "0.8787845969"
- "0.8912957311"
- "0.9037175775"
- "0.9160417914"
- "0.9282603264"
- "0.9403651357"
- "0.9523484707"
- "0.9642024636"
- "0.9759195447"
- "0.9874922633"
- "0.9989133477"
- "1.0101755857"
- "1.0212720633"
- "1.0321958065"
- "1.0429403782"
- "1.0534992218"
- "1.0638661385"
- "1.0740350485"
- "1.0839999914"
- "1.0937553644"
- "1.1032958031"
- "1.1126159430"
- "1.1217108965"
- "1.1305756569"
- "1.1392059326"
- "1.1475973129"
- "1.1557455063"
- "1.1636469364"
- "1.1712977886"
- "1.1786948442"
- "1.1858347654"
- "1.1927149296"
- "1.1993324757"
- "1.2056852579"
- "1.2117708921"
- "1.2175877094"
- "1.2231340408"
- "1.2284084558"
- "1.2334098816"
- "1.2381374836"
- "1.2425906658"
- "1.2467689514"
- "1.2506724596"
- "1.2543011904"
- "1.2576555014"
- "1.2607362270"
- "1.2635440826"
- "1.2660802603"
- "1.2683460712"
- "1.2703431845"
- "1.2720735073"
- "1.2735389471"
- "1.2747418880"
- "1.2756848335"
- "1.2763705254"
- "1.2768018246"
- "1.2769819498"
- "1.2769142389"
- "1.2766022682"
- "1.2760497332"
- "1.2752605677"
- "1.2742389441"
- "1.2729890347"
- "1.2715153694"
- "1.2698224783"
- "1.2679152489"
- "1.2657985687"
- "1.2634774446"
- "1.2609571218"
- "1.2582428455"
- "1.2553402185"
- "1.2522546053"
- "1.2489918470"
- "1.2455575466"
- "1.2419576645"
- "1.2381982803"
- "1.2342851162"
- "1.2302243710"
- "1.2260223627"
- "1.2216850519"
- "1.2172187567"
- "1.2126297951"
- "1.2079244852"
- "1.2031091452"
- "1.1981900930"
- "1.1931737661"
- "1.1880663633"
- "1.1828743219"
- "1.1776038408"
- "1.1722614765"
- "1.1668531895"
- "1.1613854170"
- "1.1558641195"
- "1.1502956152"
- "1.1446858644"
- "1.1390409470"
- "1.1333665848"
- "1.1276687384"
- "1.1219530106"
- "1.1162252426"
- "1.1104906797"
- "1.1047550440"
- "1.0990233421"
- "1.0933010578"
- "1.0875929594"
- "1.0819040537"
- "1.0762392282"
- "1.0706030130"
- "1.0650000572"
- "1.0594344139"
- "1.0539103746"
- "1.0484319925"
- "1.0430032015"
- "1.0376274586"
- "1.0323083401"
- "1.0270493031"
- "1.0218533278"
- "1.0167233944"
- "1.0116623640"
- "1.0066727400"
- "1.0017570257"
- "0.9969171882"
- "0.9921554327"
- "0.9874735475"
- "0.9828731418"
- "0.9783555865"
- "0.9739221334"
- "0.9695737958"
- "0.9653114080"
- "0.9611356258"
- "0.9570468664"
- "0.9530453682"
- "0.9491312504"
- "0.9453042150"
- "0.9415640235"
- "0.9379101396"
- "0.9343418479"
- "0.9308582544"
- "0.9274582267"
- "0.9241406322"
- "0.9209038615"
- "0.9177464843"
- "0.9146665931"
- "0.9116622806"
- "0.9087314606"
- "0.9058719277"
- "0.9030811787"
- "0.9003567100"
- "0.8976957798"
- "0.8950956464"
- "0.8925532699"
- "0.8900655508"
- "0.8876292706"
- "0.8852411509"
- "0.8828977346"
- "0.8805954456"
- "0.8783307076"
- "0.8760997653"
- "0.8738988042"
- "0.8717239499"
- "0.8695712090"
- "0.8674365878"
- "0.8653160334"
- "0.8632053733"
- "0.8611004949"
- "0.8589971066"
- "0.8568910956"
- "0.8547781110"
- "0.8526539207"
- "0.8505142331"
- "0.8483548164"
- "0.8461713791"
- "0.8439597487"
- "0.8417155743"
- "0.8394347429"
- "0.8371130228"
- "0.8347464204"
- "0.8323308229"
- "0.8298621774"
- "0.8273366094"
- "0.8247502446"
- "0.8220993280"
- "0.8193800449"
- "0.8165889382"
- "0.8137224317"
- "0.8107770681"
- "0.8077496886"
- "0.8046370149"
- "0.8014360666"
- "0.7981439233"
- "0.7947577834"
- "0.7912749648"
- "0.7876930833"
- "0.7840096951"
- "0.7802226543"
- "0.7763299346"
- "0.7723296881"
- "0.7682202458"
